LPS-29913 - Source Formatting

--- a/portal-web/docroot/html/portlet/admin/server.jspf
+++ b/portal-web/docroot/html/portlet/admin/server.jspf
@@ -832,8 +832,36 @@ serverURL.setParameter("tabs3", tabs3);
 							var STYLES_COLOR_TOTAL = '#C1CCD9';
 							var STYLES_COLOR_USED = '#3B7391';
 
-							/******************************************/
-							/* Total Memory */
+							var renderMemoryAllContainer = A.one('.charts-memory .memory-all .chart');
+							var renderMemoryMaxContainer = A.one('.charts-memory .memory-max .chart');
+							var renderMemoryTotalContainer = A.one('.charts-memory .memory-total .chart');
+
+							var allDataProvider = [
+								{
+									category: '<liferay-ui:message key="used-memory" />',
+									values: <%= String.valueOf(memoryTotalUsed) %>
+								},
+								{
+									category: '<liferay-ui:message key="free-total-memory" />',
+									values: <%= String.valueOf(memoryTotalFree) %>
+								},
+								{
+									category: '<liferay-ui:message key="free-maximum-memory" />',
+									values: <%= String.valueOf(memoryAllMaxFree) %>
+								}
+							];
+
+							var maxDataProvider = [
+								{
+									category: '<liferay-ui:message key="used-memory" />',
+									values: <%= String.valueOf(memoryTotalUsed) %>
+								},
+								{
+									category: '<liferay-ui:message key="free-maximum-memory" />',
+									values: <%= String.valueOf(memoryMaxFree) %>
+								}
+							];
+
 							var totalDataProvider = [
 								{
 									category: '<liferay-ui:message key="used-memory" />',
@@ -847,54 +875,25 @@ serverURL.setParameter("tabs3", tabs3);
 
 							new Liferay.Portlet.AdminPieChart(
 								{
+									boundingBox: renderMemoryTotalContainer,
 									dataProvider: totalDataProvider,
-									renderContainer: A.one('.charts-memory .memory-total .chart'),
 									stylesColors: [STYLES_COLOR_USED, STYLES_COLOR_TOTAL]
 								}
 							);
 
-							/******************************************/
-							/* Max Memory */
-							var maxDataProvider = [
-								{
-									category: '<liferay-ui:message key="used-memory" />',
-									values: <%= String.valueOf(memoryMaxUsed) %>
-								},
-								{
-									category: '<liferay-ui:message key="free-maximum-memory" />',
-									values: <%= String.valueOf(memoryMaxFree) %>
-								}
-							];
 
 							new Liferay.Portlet.AdminPieChart(
 								{
+									boundingBox: renderMemoryMaxContainer,
 									dataProvider: maxDataProvider,
-									renderContainer: A.one('.charts-memory .memory-max .chart'),
 									stylesColors: [STYLES_COLOR_USED, STYLES_COLOR_MAX]
 								}
 							);
 
-							/******************************************/
-							/* All Memory */
-							var allDataProvider = [
-								{
-									category: '<liferay-ui:message key="used-memory" />',
-									values: <%= String.valueOf(memoryAllUsed) %>
-								},
-								{
-									category: '<liferay-ui:message key="free-total-memory" />',
-									values: <%= String.valueOf(memoryAllTotalFree) %>
-								},
-								{
-									category: '<liferay-ui:message key="free-maximum-memory" />',
-									values: <%= String.valueOf(memoryAllMaxFree) %>
-								}
-							];
-
 							new Liferay.Portlet.AdminPieChart(
 								{
+									boundingBox: renderMemoryAllContainer,
 									dataProvider: allDataProvider,
-									renderContainer: A.one('.charts-memory .memory-all .chart'),
 									stylesColors: [STYLES_COLOR_USED, STYLES_COLOR_TOTAL, STYLES_COLOR_MAX]
 								}
 							);
