--- a/portal-web/docroot/html/portlet/admin/css/main.css
+++ b/portal-web/docroot/html/portlet/admin/css/main.css
@@ -21,8 +21,8 @@
 		width: 200px;
 
 		*, & {
-			outline: 0;
 			cursor: default;
+			outline: 0;
 		}
 	}
 
@@ -48,8 +48,7 @@
 	}
 }
 
-/****************************************/
-/* Extras */
+/* ---------- Extras ---------- */
 .charts-memory {
 	.chart {
 		*, & {
